@@ -1,4 +1,4 @@
-This file documents the revision history for Perl extension Catalyst.
+e This file documents the revision history for Perl extension Catalyst.
 
 5.7009  2007-08-17 10:00:00
         - Moved Manual.pod to Manual.pm and clarified status of 
@@ -6,6 +6,7 @@ This file documents the revision history for Perl extension Catalyst.
         - Doc patches to Catalyst::Controller
         - remove ignore_loaded from plugin load, commenting why
         - document the ignore_loaded feature in Catalyst::Utils
+        - Add testing of inline plugins.
 
 5.7008  2007-08-13 08:40:00
         - Added $c->request->query_keywords for getting the keywords
